minikube/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # tls:
  # - hosts:
  #   - petclinic.ph-rustingheart.dns-dynamic.net
  #   secretName: petclinic-tls-secret  # Name of the TLS secret 
  ingressClassName: nginx
  rules:
  - host: petclinic.ph-rustingheart.dns-dynamic.net  # Replace with your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petclinic-service
            port:
              number: 8080
